--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Consulta de Devedores 1</h1>
+            <h1>Consulta de Devedores </h1>
             <p class="subtitle">Sistema de consulta de informações de devedores pessoa física e jurídica</p>
         </header>
 
